<resources>
    <string name="app_name">Endows</string>
    <string name="label_login">Sign In with Biometric</string>
    <string name="label_remember_me">Remember me</string>
    <string name="hint_login_password">Password</string>
    <string name="hint_login_account_no">Card no</string>
    <string name="label_login_title">Sign in to Endows</string>
    <string name="label_app_tag">Your everyday banking \nmade easy!</string>
    <string name="label_login_trouble_signing_in">Trouble Signing in?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="label_not_enrolled">Not Enrolled?</string>
    <string name="label_forgot_password_sub">Reset your password</string>
    <string name="label_not_enrolled_sub">Register for mobile banking</string>
    <string name="label_trouble_already_banking_online_sub">Use the same password to sign in to our app.</string>
    <string name="label_sign_in">Sign in</string>
    <string name="label_fond_account_phone_or_email">Phone or email</string>
    <string name="label_find_account_submit">FIND YOUR ACCOUNT</string>
    <string name="label_confirm_account_user_alert">We’ll send you a code you can use to Sign in.</string>
    <string name="label_endows_client">Endows Client</string>
    <string name="label_confirm_account_sms">Confirm via SMS</string>
    <string name="label_confirm_account_submit">CONTINUE</string>
    <string name="label_confirm_account_enter_password">ENTER PASSWORD TO SIGN IN</string>
    <string name="label_enter_otp_user_alert">We sent a 6-digit code. Enter that code to reset your password</string>
    <string name="label_enter_otp_code">Enter code</string>
    <string name="label_confirm_account_cancel">CANCEL</string>
    <string name="label_reset_title">Create a New Password</string>
    <string name="label_reset_sub_title">You’ll use this password to access your account</string>
    <string name="label_reset_password_new">Type a new password</string>
    <string name="label_reset_password_new_confirm">Confirm password</string>
    <string name="label_savings">Savings</string>
    <string name="label_savings_balance">Balance</string>
    <string name="label_savings_income">Income</string>
    <string name="label_savings_expence">Expense</string>
    <string name="label_savings_today_spend">TODAY SPENT</string>
    <string name="label_chequing">CHEQUING</string>
    <string name="label_chequing_card_no">XXXX XXXX XXXX XXXX</string>
    <string name="label_chequing_credit">CREDIT</string>
    <string name="label_validity_thru">VALID \nTHRU</string>
    <string name="label_chequing_valid_thru">08/23</string>
    <string name="label_chequing_last_payment">Last Payment</string>
    <string name="label_transaction_recent">RECENT</string>
    <string name="label_details_balance">Available Balance</string>
    <string name="label_details_account_info_title">Account Information</string>
    <string name="label_details_account_name">Account name</string>
    <string name="label_details_account_no">Account Number</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="label_trouble_already_banking">Already Banking Online?</string>
    <string name="label_transfer_title">Within my own accounts</string>
    <string name="label_transfer_from">From</string>
    <string name="label_transfer_from_account">Select account</string>
    <string name="label_transfer_to">To</string>
    <string name="label_transfer_amount">Amount</string>
    <string name="hint_transfer_amount">Enter Amount</string>
    <string name="label_interac_title">Via Interac e-Transfer</string>
    <string name="label_transfer_contact_title">Interac e-Transfer contacts</string>
    <string name="label_to_send_money_title">Send Money to</string>
    <string name="label_add_contact_name">Contact name</string>
    <string name="hint_add_contact_name">Add name</string>
    <string name="label_add_contact_email">Email</string>
    <string name="hint_add_contact_email">name@domain.com</string>
    <string name="label_credit_card">CREDIT CARD</string>
    <string name="label_zero_dollar">$00.00</string>
    <string name="label_empty">--</string>
    <string name="label_credti_card_balance">Current Outstanding Balance</string>
    <string name="label_creadit_card_number_title">Credit card number</string>
    <string name="label_transfer_choose">Select account</string>
    <string name="label_pay_bill_title">Pay Utility Bills</string>
    <string name="label_pay_bill_utility_type">Utility Type</string>
    <string name="label_pay_bill_choose_account">Choose utility</string>
    <string name="label_pay_bill_bill_no">Subscription Number</string>
    <string name="label_pay_bill_no">Enter bill number</string>
    <string name="label_utility_type_title">Choose type</string>
    <string name="label_utility_hydo">HYDO</string>
    <string name="label_utility_water">Water</string>
    <string name="label_utility_gas">Gas</string>
    <string name="label_utility_phone">Phone</string>
    <string name="label_empty_transaction">No transaction</string>
    <string name="label_protecting_our_clients_personal_business_and_financial_information_and_safeguarding_you_from_fraud_are_among_our_highest_priorities_in_addition_to_our_stringent_privacy_practices_we_employ_a_diverse_range_of_technologies_and_security_mechanisms_to_ensure_the_safety_confidentiality_and_integrity_of_your_information_and_transactions">Protecting our clients’ personal, business and financial information and safeguarding you from fraud are among our highest priorities. In addition to our stringent Privacy Practices, we employ a diverse range of technologies and security mechanisms to ensure the safety, confidentiality and integrity of your information and transactions.</string>
    <string name="Label_notice">At Endows, we are dedicated to protecting your privacy and safeguarding the personal information you have entrusted to us.</string>
    <string name="label_important">Protecting your privacy and safeguarding your personal information is a cornerstone of our organizational ethics and values and will always be one of our highest priorities.</string>
    <string name="label_protected_protecting_your_information_and_ensuring_the_security_of_your_transactions_are_among_our_highest_priorities_but_you_can_maximize_your_own_online_privacy_and_security_by_being_informed_which_is_often_the_best_defense_against_fraud">Protecting your information and ensuring the security of your transactions are among our highest priorities. But you can maximize your own online privacy and security, by being informed, which is often the best defense against fraud.</string>
    <string name="label_we_may_change_this_privacy_notice_from_time_to_time_any_changes_will_be_posted_on_our_website">*We may change this Privacy Notice from time to time. Any changes will be posted on our website.</string>
    <string name="label_contact_call_sub">Speak with a specialized Advisor</string>
    <string name="label_call">Call now</string>
    <string name="label_sms">Text now</string>
    <string name="label_contact_sms_sub">Chat with a specialized Advisor</string>
    <string name="label_email">Send us an email</string>
    <string name="label_contact_email_sub">Email us and we’ll respond within one business day.</string>
    <string name="label_transaction_report">Generate Statement</string>
</resources>
