<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.ResetPasswordFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_reset_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_reset_title"
        android:fontFamily="@font/avenir_roman"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/colorTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_reset_password_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_26sdp"
        android:fontFamily="@font/avenir_roman"
        android:text="@string/label_reset_sub_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_reset_password_title"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_reset_password_new"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="number"
        android:fontFamily="@font/avenir_roman"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:hint="@string/label_reset_password_new"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_reset_password_sub_title"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_reset_password_new_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="number"
        android:fontFamily="@font/avenir_roman"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:hint="@string/label_reset_password_new_confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_reset_password_new"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_reset_password_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:paddingTop="@dimen/_8sdp"
        android:gravity="center"
        android:fontFamily="@font/avenir_heavy"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/label_confirm_account_submit"
        android:background="@drawable/bg_rounded_button"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_reset_password_new_confirm"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_reset_password_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:paddingTop="@dimen/_8sdp"
        android:gravity="center"
        android:fontFamily="@font/avenir_heavy"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/label_confirm_account_cancel"
        android:background="@drawable/bg_rounded_grey_button"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_reset_password_continue"/>

</androidx.constraintlayout.widget.ConstraintLayout>