<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded_white_box" android:padding="@dimen/_8sdp"
    tools:context=".views.fragments.home.hometop.chequing.ChequingFragment">

    <View
        android:id="@+id/view_debit_card"
        android:layout_width="0dp"
        android:layout_height="@dimen/_180sdp"
        android:background="@drawable/img_credit_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_card_logo"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_margin="@dimen/_16sdp"
        android:src="@drawable/ic_bank_logo"
        app:layout_constraintStart_toStartOf="@+id/view_debit_card"
        app:layout_constraintTop_toTopOf="@+id/view_debit_card" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_48sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:src="@drawable/img_card_chip"
        app:layout_constraintBottom_toBottomOf="@+id/view_debit_card"
        app:layout_constraintStart_toStartOf="@+id/view_debit_card"
        app:layout_constraintTop_toTopOf="@+id/view_debit_card" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:src="@drawable/img_card_wifi"
        app:layout_constraintBottom_toBottomOf="@+id/view_debit_card"
        app:layout_constraintEnd_toEndOf="@+id/view_debit_card"
        app:layout_constraintTop_toTopOf="@+id/view_debit_card" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_12sdp"
        android:src="@drawable/img_card_visa"
        app:layout_constraintTop_toTopOf="@+id/tv_chequing_valid_thru_title"
        app:layout_constraintBottom_toBottomOf="@id/tv_chequing_valid_thru_title"
        app:layout_constraintEnd_toEndOf="@id/view_debit_card" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:fontFamily="@font/avenir_heavy"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_card_logo"
        app:layout_constraintStart_toEndOf="@+id/iv_card_logo"
        app:layout_constraintTop_toTopOf="@+id/iv_card_logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16sdp"
        android:fontFamily="@font/avenir_heavy"
        android:text="@string/label_credit_card"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/view_debit_card"
        app:layout_constraintTop_toTopOf="@+id/iv_card_logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_heavy"
        android:text="@string/label_credti_card_balance"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="@id/view_debit_card"
        app:layout_constraintEnd_toEndOf="@id/view_debit_card"
        app:layout_constraintStart_toStartOf="@id/view_debit_card"
        app:layout_constraintTop_toTopOf="@id/view_debit_card"
        app:layout_constraintVertical_bias="0.30" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_credit_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_black"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_4sdp"
        app:layout_constraintBottom_toBottomOf="@id/view_debit_card"
        app:layout_constraintEnd_toEndOf="@id/view_debit_card"
        app:layout_constraintStart_toStartOf="@id/view_debit_card"
        app:layout_constraintTop_toTopOf="@id/view_debit_card"
        android:text="@string/label_zero_dollar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_credit_credit_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/label_chequing_card_no"
        android:textColor="@color/colorGolden"
        android:textSize="@dimen/_18sdp"
        android:fontFamily="@font/avenir_heavy"
        app:layout_constraintEnd_toEndOf="@id/view_debit_card"
        app:layout_constraintStart_toStartOf="@id/view_debit_card"
        app:layout_constraintTop_toBottomOf="@id/tv_credit_balance" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_chequing_valid_thru_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:fontFamily="@font/avenir_heavy"
        android:text="@string/label_validity_thru"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@id/view_debit_card"
        app:layout_constraintEnd_toEndOf="@id/view_debit_card"
        app:layout_constraintHorizontal_bias="0.40"
        app:layout_constraintStart_toStartOf="@id/view_debit_card"
        app:layout_constraintTop_toBottomOf="@+id/tv_credit_credit_no" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_credit_valid_thru_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:fontFamily="@font/avenir_light"
        android:text="@string/label_chequing_valid_thru"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/tv_chequing_valid_thru_title"
        app:layout_constraintStart_toEndOf="@+id/tv_chequing_valid_thru_title"
        app:layout_constraintTop_toTopOf="@+id/tv_chequing_valid_thru_title" />



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_last_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_heavy"
        android:gravity="center"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/label_chequing_last_payment"
        android:textColor="@color/colorTextColor"
        app:layout_constraintEnd_toStartOf="@+id/gl_chequing_50"
        app:layout_constraintStart_toStartOf="@+id/view_debit_card"
        app:layout_constraintTop_toBottomOf="@+id/view_debit_card"
        android:layout_marginStart="@dimen/_20sdp"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_credit_card_payment_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_heavy"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/label_empty"
        android:textColor="@color/colorTextColor"
        app:layout_constraintEnd_toStartOf="@+id/gl_chequing_50"
        app:layout_constraintStart_toStartOf="@+id/view_debit_card"
        app:layout_constraintTop_toBottomOf="@+id/tv_last_payment"
        android:layout_marginStart="@dimen/_20sdp"/>

   <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_chequing_today_spent_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_heavy"
        android:textColor="@color/colorTextColor"
        android:text="@string/label_savings_today_spend"
        android:layout_marginTop="@dimen/_4sdp"
        app:layout_constraintTop_toBottomOf="@+id/view_debit_card"
        app:layout_constraintStart_toEndOf="@+id/gl_chequing_50"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_credit_today_spent_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_heavy"
        android:textColor="@color/colorTextColor"
        android:text="@string/label_zero_dollar"
        app:layout_constraintTop_toBottomOf="@+id/tv_chequing_today_spent_title"
        app:layout_constraintStart_toEndOf="@+id/gl_chequing_50"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_down_arrow_blue"
        android:layout_marginEnd="@dimen/_4sdp"
        app:layout_constraintEnd_toStartOf="@+id/tv_chequing_today_spent_title"
        app:layout_constraintTop_toTopOf="@+id/tv_chequing_today_spent_title"
        app:layout_constraintBottom_toBottomOf="@+id/tv_chequing_today_spent_value"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_chequing_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

</androidx.constraintlayout.widget.ConstraintLayout>