<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.AppActivity">

    <View
        android:id="@+id/view_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/bg_bottom_straight"
        app:layout_constraintBottom_toTopOf="@+id/gl_vertical_center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_login_account_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/avenir_roman"
        android:hint="@string/hint_login_account_no"
        android:inputType="number"
        android:maxLength="16"
        app:layout_constraintBottom_toTopOf="@+id/edt_login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--    <androidx.appcompat.widget.AppCompatTextView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:textColor="@android:color/white"-->
    <!--        android:fontFamily="@font/avenir_heavy"-->
    <!--        android:layout_marginStart="@dimen/_20sdp"-->
    <!--        android:layout_marginTop="@dimen/_20sdp"-->
    <!--        android:textSize="@dimen/_30sdp"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        android:text="@string/app_name"/>-->

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/avenir_roman"
        android:hint="@string/hint_login_password"
        android:inputType="textWebPassword"
        app:layout_constraintBottom_toTopOf="@+id/switch_remember_me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:src="@drawable/ic_bank_logo"
        app:layout_constraintBottom_toBottomOf="@+id/view_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_top"
        app:layout_constraintVertical_bias="0.35" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/avenir_roman"
        android:gravity="center"
        android:text="@string/label_app_tag"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="@+id/view_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_login_logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/avenir_roman"
        android:text="@string/label_login_title"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintBottom_toTopOf="@+id/edt_login_account_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gl_vertical_center" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:fontFamily="@font/avenir_heavy"
        android:text="@string/label_remember_me"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintBottom_toBottomOf="@+id/switch_remember_me"
        app:layout_constraintEnd_toStartOf="@+id/switch_remember_me"
        app:layout_constraintTop_toTopOf="@+id/switch_remember_me" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_login_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/bg_btn_login"
        android:fontFamily="@font/avenir_heavy"
        android:gravity="center"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/label_login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_login_trouble_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_heavy"
        android:text="@string/label_login_trouble_signing_in"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_submit" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/btn_login_submit"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_vertical_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".50" />

</androidx.constraintlayout.widget.ConstraintLayout>