<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.EnterOTPFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_enter_otp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorTextColor"
        android:fontFamily="@font/avenir_roman"
        android:layout_marginTop="@dimen/_20sdp"
        tools:text="Enter the Code We Sent To \n +16476753056"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_enter_otp_user_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/avenir_roman"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/label_enter_otp_user_alert"
        app:layout_constraintTop_toBottomOf="@+id/tv_enter_otp_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_enter_otp_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="number"
        android:fontFamily="@font/avenir_roman"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:hint="@string/label_enter_otp_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_enter_otp_user_alert"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_enter_otp_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:paddingTop="@dimen/_8sdp"
        android:gravity="center"
        android:fontFamily="@font/avenir_heavy"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/label_confirm_account_submit"
        android:background="@drawable/bg_rounded_button"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_enter_otp_code"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_enter_otp_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:paddingTop="@dimen/_8sdp"
        android:gravity="center"
        android:fontFamily="@font/avenir_heavy"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/label_confirm_account_cancel"
        android:background="@drawable/bg_rounded_grey_button"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_enter_otp_continue"/>

</androidx.constraintlayout.widget.ConstraintLayout>